--- a/src/LarpManager/Views/admin/religion/detail.twig
+++ b/src/LarpManager/Views/admin/religion/detail.twig
@@ -4,45 +4,48 @@
 
 {% block content %}
 
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-xs-12 col-md-8">
+	<ol class="breadcrumb">
+		<li><a href="{{ path('homepage') }}">Accueil</a></li>
+		<li><a href="{{ path("religion") }}">Liste des religions</a></li>
+		<li class="active">{{ religion.label }}</li>
+	</ol>
+	
+	<div class="well well-sm">
 		
-			<div class="well well-sm bs-component">
-			<a href="{{ path('religion') }}">Retour à la liste des religions</a>
-				<div class="row">
-					<div class="col-md-8">
-						<h4>
-							{{ religion.label }}
-						</h4>
-					</div>
-				
-					<div class="col-md-4">
-						{% if religion.blason %}
-							<img width="160" src="{{ path('blason.get', {'blason' : religion.blason }) }}" /><br />
-						{% endif %}
-						<a href="{{ path('religion.update.blason', {'religion': religion.id}) }}">Ajouter ou modifier le blason</a>
-					</div>
-				</div>
+		<div class="clearfix">
+			<h4>
+			{{ religion.label }}
+			</h4>
+		
+		
+		
+			<div class="pull-right">
+				{% if religion.blason %}
+					<img width="160" src="{{ path('blason.get', {'blason' : religion.blason }) }}" /><br />
+				{% endif %}
+				<small><a href="{{ path('religion.update.blason', {'religion': religion.id}) }}">Ajouter ou modifier le blason</a></small>
 			</div>
+		</div>
 		
-  			<div class="list-group">
+	
+		
+  		<div class="list-group">
 		    		
-		    	<div class="list-group-item">
-			    	<h4 class="list-group-item-heading">Description</h4>
-	    			<p class="list-group-item-text">
-	    			{% if not religion.description %}
+	    	<div class="list-group-item">
+		    	<h4 class="list-group-item-heading">Description</h4>
+    			<p class="list-group-item-text">
+    				{% if not religion.description %}
     				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
     				Attention, cette religion n'a pas de description.
     				{% else %}
     					{{ religion.description|markdown }}
     				{% endif %}
-    				</p>
-	    		</div>
+    			</p>
+	    	</div>
 	    		
-	    		<div class="list-group-item">
-			    	<h4 class="list-group-item-heading">Sphères</h4>
-	    			<p class="list-group-item-text">
+	    	<div class="list-group-item">
+			    <h4 class="list-group-item-heading">Sphères</h4>
+	    		<p class="list-group-item-text">
 	    			{% if not religion.spheres %}
     				<span class="glyphicon glyphicon-info-sign" aria-hidden="true"></span>
     				Attention, cette religion n'a pas de sphère.
@@ -53,18 +56,41 @@
     					{% endfor %}
     					</ul>
     				{% endif %}
-    				</p>
-	    		</div>
+    			</p>
+	    	</div>
 
-				
-				<div class="list-group-item">
-  					<div class="btn-group" role="group" aria-label="...">
-  						<a  class="btn btn-primary" role="button" href="{{ path('religion.update', {index : religion.id}) }}">Modifier</a>
-					</div>
-  				</div>
-			</div>
+			<div class="list-group-item">
+				<h4 class="list-group-item-heading">Territoires principaux ({{ religion.territoirePrincipaux|length }})</h4>
+	    		<p class="list-group-item-text">
+	    			<ul>
+		    			{% for territoire in religion.territoirePrincipaux %}
+		    				<li><a href="{{ path('territoire.admin.detail', {'territoire': territoire.id}) }}">{{ territoire.nom }}</a></li>
+		    			{% else %}
+		    				<li>Cette religion n'est le culte principal d'aucun territoire</li>
+		    			{% endfor %}
+	    			</ul>
+	    		</p>
+	    	</div>
+
+			<div class="list-group-item">
+				<h4 class="list-group-item-heading">Territoires secondaire ({{ religion.territoireSecondaires|length }})</h4>
+	    		<p class="list-group-item-text">
+	    			<ul>
+		    			{% for territoire in religion.territoireSecondaires %}
+		    				<li><a href="{{ path('territoire.admin.detail', {'territoire': territoire.id}) }}">{{ territoire.nom }}</a></li>
+		    			{% else %}
+		    				<li>Cette religion n'est le culte secondaire d'aucun territoire</li>
+		    			{% endfor %}
+	    			</ul>
+	    		</p>
+	    	</div>	    			
+			
+			<div class="list-group-item">
+  				<div class="btn-group" role="group" aria-label="...">
+  					<a  class="btn btn-primary" role="button" href="{{ path('religion.update', {index : religion.id}) }}">Modifier</a>
+				</div>
+  			</div>
 		</div>
 	</div>
-</div>
 
 {% endblock %}
