--- a/src/LarpManager/Views/menu.twig
+++ b/src/LarpManager/Views/menu.twig
@@ -57,6 +57,7 @@
 					<ul class="dropdown-menu">
 						<li><a href="{{ path('territoire.admin.list') }}">Territoires</a></li>
 						<li><a href="{{ path('religion') }}">Religions</a></li>
+						<li><a href="{{ path('culture') }}">Cultures</a></li>
 						<li><a href="{{ path('world') }}">Carte</a></li>
 					</ul>
 				</li>
